全面改进对jdk11的支持